--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 A simple redit dupe that allows admins and users to be created with different privileges.
 
-Topics can be created. Posts can then be created under topics. Users can reate comments on posts and then edit or delete them.
+Topics can be created. Posts can then be created under topics. Users can create comments on posts and then edit or delete them.
